--- a/src/less/item.less
+++ b/src/less/item.less
@@ -41,6 +41,7 @@
   background: @form-input-background--light;
   resize: vertical;
   appearance: none;
+  resize: none;
 
   input& {
     &::placeholder {
