fix displaying textarea label with placeholder

--- a/src/less/item.less
+++ b/src/less/item.less
@@ -77,6 +77,10 @@
   pointer-events: none;
 }
 
+.form-item__label--with-placeholder {
+  top: 10px;
+}
+
 .form-item__input:focus + .form-item__label,
 .form-item--filled .form-item__label,
 .form-item--tags .form-item__label {
