[#3] Add classes based on required/readonly state

--- a/src/less/form-item.less
+++ b/src/less/form-item.less
@@ -111,6 +111,10 @@
     line-height: 1.1;
 }
 
+.form-item--required .form-item__label:before {
+    content: '*';
+}
+
 /**
 * Hider used for description label
 */
