--- a/src/less/form-item.less
+++ b/src/less/form-item.less
@@ -161,3 +161,10 @@
     position: relative;
     flex: 1 1 auto;
 }
+
+.form-item--hidden {
+
+    .form-item__field {
+        display: none;
+    }
+}
