[1839] Add disabled state; Adjust readme;

--- a/src/less/form-item.less
+++ b/src/less/form-item.less
@@ -158,6 +158,10 @@
     line-height: 1;
 }
 
+.form-item--disabled {
+    opacity: .5;
+}
+
 .form-item__wrapper {
     position: relative;
     display: block;
